Update frontend to work with new backend

--- a/.env
+++ b/.env
@@ -5,3 +5,13 @@ DB_DATABASE=finals_72sf
 DB_PORT=5432
 SESSION_SECRET=mysupersecret123
 NODE_ENV=production
+
+
+PORT=4000
+DB_USER=sk
+DB_PASSWORD=34mB4mKjqZXVqqPAPyw8xrjddCqj0uq4
+DB_HOST=dpg-d4i6bogdl3ps73a5cv6g-a.oregon-postgres.render.com
+DB_PORT=5432
+DB_DATABASE=sk_blqo
+DB_SSL=true
+JWT_SECRET=replace_with_a_strong_secret_here
